CSS::Sass (3.1.0)

  * Updates to latest libsass version (3.1.0)
  * Changed to use new C-API (sass_context.h)
  * Changed omit_src_map_url to no_src_map_url
  * Implement custom importers (experimental)

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Fri, 02 Jan 2015 04:10:28 +0100

CSS::Sass (3.0.2)

  * Updates to latest libsass version (3.0.2)
  * Add new source map embedding features
  * Implements source-map-embed option
  * Implements source-map-contents option

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Wed, 05 Nov 2014 02:46:05 +0100

CSS::Sass (3.0.1)

  * Adds latest libsass changes (3.0.0)
  * Reimplemented and improved CSS::Sass::Type
  * Fixes memory leaks introduced in 3.0.0
  * Fixes building on various platforms

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Sat, 25 Oct 2014 14:04:37 +0200

CSS::Sass (3.0.0)

  * Updates to latest libsass (3.0.0)
  * Implements libsass source maps options
  * Exports libsass sass2scss function
  * Adds minimal command line utility
  * Adds complete sass-spec test suite
  * Adds CSS::Sass::Type::Map for maps
  * Adds Travis CI (continous integration)
  * Adds coveralls.io (code coverage metrics)

 -- Marcel Greter <perl-libsass@ocbnet.ch>  Sat, 25 Oct 2014 14:00:47 +0200

CSS::Sass (0.8.1)

  * Add requirement for Class::Accessor::Fast to Build.PL. One day it will
    pass tests on cpantesters.

 -- David Caldwell <david@porkrind.org>  Thu, 03 Oct 2013 16:52:17 -0700

CSS::Sass (0.8.0)

  * Fix building on Strawberry Perl (Marcel Greter).

 -- David Caldwell <david@porkrind.org>  Fri, 27 Sep 2013 14:43:36 -0700

CSS::Sass (0.7.0)

  * Fix Sass functions so that you may have more than 1 at a time (Dan
    Thomas).

 -- David Caldwell <david@porkrind.org>  Tue, 13 Aug 2013 11:08:34 -0700

CSS::Sass (0.6.0)

  * Add Sass functions implemented in Perl.

 -- David Caldwell <david@porkrind.org>  Sat, 22 Jun 2013 13:10:04 -0700

CSS::Sass (0.5.0)

  * Fix build issue on OpenSolaris.
  * Fix include path issue on Windows.