@@ -93,7 +93,6 @@ is    ($r->{error_status},  0,                        "import no error_status");
 is    ($r->{error_message}, undef,                    "import error_message is undef");
 like  ($r->{output_string}, qr/0\.33333;/,            "default float precision is 5");
 
-# has regression in https://github.com/sass/libsass/issues/364
 $r = CSS::Sass::compile_sass('.valid { width: #{(1/3)}; }', { precision => 10 });
 is    ($r->{error_status},  0,                        "import no error_status");
 is    ($r->{error_message}, undef,                    "import error_message is undef");
